Wrap du site via Electron

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "check-md": "vuepress check-md docs"
+    "check-md": "vuepress check-md docs",
+    "electron": "wait-on http://localhost:8080 && electron .",
+    "electron-dev": "concurrently \"yarn run dev\" \"yarn run electron\"",
+    "preelectron-pack": "yarn build",
+    "electron-pack": "electron-builder"
   },
   "dependencies": {
     "@mdi/font": "^5.0.45",
@@ -15,6 +19,7 @@
     "@vuepress/plugin-google-analytics": "^1.4.1",
     "@vuepress/plugin-pwa": "^1.4.1",
     "axios": "^0.19.2",
+    "electron-serve": "^1.1.0",
     "file-saver": "^2.0.2",
     "flexsearch": "nextapps-de/flexsearch",
     "js-cookie": "^2.2.1",
@@ -26,7 +31,6 @@
     "slugify": "^1.4.0",
     "vue": "^2.6.11",
     "vue-masonry-css": "^1.0.3",
-    "vuepress": "^1.4.0",
     "vuepress-plugin-clean-urls": "^1.1.1",
     "vuepress-plugin-dehydrate": "^1.1.3",
     "vuepress-plugin-seo": "^0.1.2",
@@ -35,6 +39,23 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "vuepress-plugin-check-md": "^0.0.2"
+    "concurrently": "^5.3.0",
+    "electron": "^11.2.3",
+    "electron-builder": "^22.9.1",
+    "vuepress": "^1.8.1",
+    "vuepress-plugin-check-md": "^0.0.2",
+    "wait-on": "^5.2.1"
+  },
+  "main": "main.js",
+  "build": {
+    "icon": "docs/.vuepress/public/favicon.png",
+    "productName": "Héros & Dragons DRS",
+    "files": [
+      "build/**/*",
+      "main.js"
+    ],
+    "win": {},
+    "linux": {},
+    "mac": {}
   }
 }
