--- a/.travis.yml
+++ b/.travis.yml
@@ -1,50 +1,76 @@
-include:
-  - os: osx
-    osx_image: xcode10.2
-    language: node_js
-    node_js: "12"
-    env:
-      - ELECTRON_CACHE=$HOME/.cache/electron
-      - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+language: node_js
 
-  - os: linux
-    services: docker
-    language: generic
+node_js:
+  - '14.15.5'
 
+# Always run two parallel builds: one on mac and one on linux
+# the linux build will use wine to be able to build windows and
+# linux apps
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode10.2
+      language: node_js
+      node_js: "14.15.5"
+      env:
+        - ELECTRON_CACHE=$HOME/.cache/electron
+        - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
+
+    - os: linux
+      dist: trusty
+      sudo: required
+      services: docker
+      language: generic
+
+notifications:
+  email: false
+
+install:
+  - yarn
+
+# cache some files for faster builds
 cache:
+  yarn: true
   directories:
     - node_modules
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
 
-before_script:
-  - export NODE_OPTIONS=–max_old_space_size=8192
+# add git lfs for large file support
+before_install:
+  - |
+    if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+      mkdir -p /tmp/git-lfs && curl -L https://github.com/github/git-lfs/releases/download/v2.3.1/git-lfs-$([ "$TRAVIS_OS_NAME" == "linux" ] && echo "linux" || echo "darwin")-amd64-2.3.1.tar.gz | tar -xz -C /tmp/git-lfs --strip-components 1
+      export PATH="/tmp/git-lfs:$PATH"
+    fi
 
+before_script:
+  - export NODE_OPTIONS="--max-old-space-size=8192"
+  - git lfs pull
+
+# on PRs and merges to master and prod run tests and build the app
 script:
   - |
     if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       docker run --rm \
-        -e GH_TOKEN=$GH_TOKEN \
-        -v $PWD:/project \
+        --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+        -e GH_TOKEN \
+        -v ${PWD}:/project \
         -v ~/.cache/electron:/root/.cache/electron \
         -v ~/.cache/electron-builder:/root/.cache/electron-builder \
         electronuserland/builder:wine \
-        /bin/bash -c "yarn install --link-duplicates --pure-lockfile && yarn electron-pack --win"
-    elif [ "$TRAVIS_OS_NAME" == "windows" ]; then
-      npm install;
-      npm run electron-pack;
+        /bin/bash -c "yarn release"
     else
-      security create-keychain -p $KEYCHAIN_PASSWORD build.keychain;
-      security default-keychain -s build.keychain;
-      security unlock-keychain -p $KEYCHAIN_PASSWORD build.keychain;
-      echo $KEYSTORE | base64 --decode - > keystore.p12;
-      security import keystore.p12 -k build.keychain -P $KEYCHAIN_PASSWORD -T /usr/bin/codesign;
-      yarn install;
-      yarn electron-pack;
+      yarn release
     fi
+# only deploy to github on a merge to the electron branch
+deploy:
+  provider: releases
+  file_glob: true
+  skip_cleanup: true
+  file: "dist/hd_electron*"
+  on:
+    branch: electron
+
 before_cache:
   - rm -rf $HOME/.cache/electron-builder/wine
-
-branches:
-  except:
-    - "/^v\\d+\\.\\d+\\.\\d+$/"
