--- a/package.json
+++ b/package.json
@@ -2,25 +2,31 @@
   "name": "heros-et-dragons-drs",
   "version": "1.0.0",
   "description": "Document de Référence Système pour Héros & Dragons",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erlik/heros-et-dragons-drs.git"
+  },
   "author": "Maxime Moraine",
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
     "check-md": "vuepress check-md docs",
     "electron": "wait-on http://localhost:8080 && electron .",
     "electron-dev": "concurrently \"yarn run dev\" \"yarn run electron\"",
     "preelectron-pack": "yarn build",
-    "electron-pack": "electron-builder",
-    "release": "electron-builder build --publish always"
+    "postinstall": "electron-builder install-app-deps",
+    "build": "electron-builder --publish never",
+    "release": "electron-builder",
+    "test": "echo success"
   },
   "dependencies": {
     "@mdi/font": "^5.0.45",
     "@vuepress/plugin-blog": "^1.9.2",
     "@vuepress/plugin-google-analytics": "^1.4.1",
     "@vuepress/plugin-pwa": "^1.4.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "electron-serve": "^1.1.0",
+    "esm": "^3.2.25",
     "file-saver": "^2.0.2",
     "flexsearch": "nextapps-de/flexsearch",
     "js-cookie": "^2.2.1",
@@ -37,7 +43,8 @@
     "vuepress-plugin-seo": "^0.1.2",
     "vuepress-plugin-sitemap": "^2.3.1",
     "vuetify": "^2.2.19",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
@@ -51,13 +58,48 @@
   "build": {
     "icon": "docs/.vuepress/public/favicon.png",
     "compression": "maximum",
-    "productName": "Héros & Dragons DRS",
+    "appId": "org.erlik.hd_electron",
+    "releaseType": "release",
     "files": [
       "build/**/*",
       "main.js"
     ],
-    "win": {},
-    "linux": {},
-    "mac": {}
+    "publish": "github",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 440,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ],
+      "artifactName": "hd_electron-${version}.${ext}"
+    },
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        },
+        {
+          "target": "portable"
+        }
+      ]
+    },
+    "nsis": {
+      "runAfterFinish": true,
+      "artifactName": "hd_electron-${version}.${ext}"
+    },
+    "portable": {
+      "artifactName": "hd_electron-portable-${version}.${ext}"
+    }
   }
 }
